[chore][links]: add noffollow

--- a/app/views/index/show.html.slim
+++ b/app/views/index/show.html.slim
@@ -4,7 +4,7 @@
       a href="/dresses/graduation"
         = image_tag "taste-of-fame.jpg", alt: 'Taste of Fame', class: 'img-responsive portrait-img'
     li
-      a href="http://prom.fameandpartners.com"
+      a href="http://prom.fameandpartners.com" rel="nofollow"
         = image_tag "prom-competition.jpg", alt: 'Prom Competition', class: 'img-responsive portrait-img'
     li
       a href="/prom-collection"
