--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -186,7 +186,7 @@ ruby:
             = link_to 'Blog', blog_path, class: 'menu-item--link'
 
           li.menu-item
-            a.menu-item--link href="http://prom.fameandpartners.com"
+            a.menu-item--link href="http://prom.fameandpartners.com" rel="nofollow"
               | Prom Competition
 
         ul.secondary.pull-right
