--- a/app/assets/stylesheets/partials/_quiz_iframe.css.scss
+++ b/app/assets/stylesheets/partials/_quiz_iframe.css.scss
@@ -1,7 +1,7 @@
 // Reset for iframe 
 html, body {
-  margin: 0;
-  max-width: 1100px;
+  // margin: 0 auto;
+  // max-width: 1100px;
 }
 // @end Reset for iframe
 // -----------------
