quiz result minor changes

--- a/app/assets/stylesheets/partials/_quiz.css.scss
+++ b/app/assets/stylesheets/partials/_quiz.css.scss
@@ -1770,19 +1770,20 @@
       line-height: 1;
     }
   }
-  .quiz-results-boho {
+  .quiz-result-1 {}
+  .quiz-result-2 {
     padding-top: 0;
     padding-bottom: 30px;
   }
-  .quiz-results-girly {
+  .quiz-result-3 {
     padding-top: 0;
     padding-bottom: 30px;
   }
-  .quiz-results-edgy {
+  .quiz-result-4 {
     padding-top: 30px;
     padding-bottom: 0;
   }
-  .quiz-results-glam {
+  .quiz-result-5 {
     padding-top: 30px;
     padding-bottom: 0;
   }
