--- a/app/assets/stylesheets/partials/_quiz_iframe.css.scss
+++ b/app/assets/stylesheets/partials/_quiz_iframe.css.scss
@@ -1,6 +1,7 @@
 // Reset for iframe 
 html, body {
-  // margin: 0 auto;
+  margin: 0 auto;
+  overflow-x: hidden;
   // max-width: 1100px;
 }
 // @end Reset for iframe
