[fix][asset] Incorrect path

--- a/app/views/layouts/redesign/_shopping_bag.html.slim
+++ b/app/views/layouts/redesign/_shopping_bag.html.slim
@@ -19,7 +19,7 @@ ruby:
         = image_tag "line-arrow.svg", class: "line-arrow arrow-bag", alt: 'Submit'
       .pull-right.close-cart
         span.cart
-          = image_tag 'Cart.svg', class: 'cart-icon'
+          = image_tag 'cart.svg', class: 'cart-icon'
           span.cart-amount = @cart.item_count
       div
         h2.cart-title Shopping Bag
