Double triple check the tracking pixel

--- a/app/views/statics/fashion_it_girl.html.slim
+++ b/app/views/statics/fashion_it_girl.html.slim
@@ -10,6 +10,7 @@ div style="margin-left: 20px"
 
 		.grid-9
 			- if current_site_version.is_usa?
+				script type="application/javascript" src="//s.uadx.com/4505c140-79a4-11e4-88aa-22000afe405e.js"
 				div class="wishpond-campaign" data-wishpond-id="487301" data-wishpond-href="https://www.wishpond.com/lp/487301"
 
 			    javascript:
