[feat][style quz results] show style profile

--- a/app/assets/stylesheets/quiz.css.scss
+++ b/app/assets/stylesheets/quiz.css.scss
@@ -9,3 +9,15 @@
 
 @import 'partials/quiz';
 @import 'partials/quiz_iframe';
+
+@import 'redesign/vars';
+@import 'libs/vex.css';
+@import 'libs/vex-theme-flat-attack.css';
+@import 'libs/vex-theme-bottom-right-corner.css';
+@import 'redesign/modal';
+
+@import 'transient_content';
+
+.hidden {
+  display: none;
+}
