--- a/app/views/style_profiles/show.html.slim
+++ b/app/views/style_profiles/show.html.slim
@@ -1,36 +1,65 @@
 - content_for :head do
-  = stylesheet_link_tag     'application_redesign'
-  = javascript_include_tag  'application_redesign'
+  = stylesheet_link_tag    'quiz'
+  = javascript_include_tag 'quiz'
 
 - content_for :footer do
   = render '/shared/marketing'
-  = render 'layouts/redesign/javascript'
-  = render '/shared/remarketing_tag'
 
-javascript:
-  $(document).ready(function(){
-    $('.img-product').hoverable();
-  });
+- content_for :inline_javascript do
+  | $('.img-product').hoverable();
 
-.user-style-profile-page-title
-  .container
-    .page-title--details
-      h1.user-account-title.no-padding-bottom.text-white 
-        | My Style Profile
+css:
+  .quiz-results-wrapper * { overflow-y: auto; }
 
-.page-content.user.style-profile.show
-  .container.relative.products-collection
-    - @recommended_products.each_slice(4) do |products|
-      .row.relative
-        - products.each do |product|
-          .col-md-3.col-xs-6.col-xxs-12.category--item
-            = link_to collection_product_path(product), target: '_blank' do  
-              - if product.images.any?
-                = cropped_product_hoverable_image_tag(product)
-            .details.text-center
-              span.name = product.name
-              span.price = price_for_product(product)
+= render '/style_profiles/javascript'
 
-            - if product.fast_delivery == true
-             = image_tag src='express_delivery.png', class: 'express-delivery'
-      .clearfix.visible-sm-block.visible-xs-block
+.quiz-box#style_quiz
+  .quiz-wrapper-box
+    / Result
+    .quiz-results-wrapper
+      .quiz-results
+        .title your style profile is:
+        .quiz-row
+          .quiz-col.quiz-col-6.quiz-result-1
+            - style = @user_styles.first
+            = image_tag 'custom-dresses/image-girl.jpg'
+            /= image_tag "style_profile/styles/image-#{ style.name }.jpg"
+            .result.lg.centered 
+              .text
+                = style.presentation
+                br
+                = style.percentage
+          .quiz-col.quiz-col-6
+            .quiz-row
+              - @user_styles[1..-1].each_with_index do |style, index|
+                .quiz-col.quiz-col-6 class="quiz-result-#{ index + 2}"
+                  = image_tag 'custom-dresses/image-girl.jpg'
+                  /= image_tag "style_profile/styels/image-#{ style.name }.jpg"
+                  .result: .text = "#{ style.presentation } #{ style.percentage }"
+
+      .quiz-results-grey-block
+        h2 
+          | Everyone has a bit of each profile in them, but you are mostly &lt;style profile&gt;.
+          small 
+            | Here's a bit about being the &lt;style profile&gt; gal:
+        p 
+          | &lt;Style Profile Overview text&gt; Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi  et dolores quin ipsum loren tempor fugit lorem ipsum e ut
+      .quiz-results-black-block
+        h2 YOUR PERSONAL ONLINE CLOSET
+        p based on your style profile we think you will love these killer dresses
+      .dress-catalog
+        .quiz-row
+          - @recommended_products.each do |product|
+            .quiz-col.quiz-col-4
+              = link_to collection_product_path(product), target: '_blank' do  
+                - if product.images.any?
+                  = cropped_product_hoverable_image_tag(product)
+                - else
+                  = product.name
+              p = product.name
+              p.price = price_for_product(product)
+      
+      .quiz-results-black-block
+        h2 Don’t fret!
+        p We have more dresses that we know you will love
+        = link_to 'MORE STYLES HERE', collection_path, class: 'btn pink-pale', target: '_blank'
