--- a/app/views/style_profiles/show.html.slim
+++ b/app/views/style_profiles/show.html.slim
@@ -22,6 +22,10 @@ css:
 
 = render '/style_profiles/javascript'
 
+ruby:
+  main_style = @user_styles.first
+  other_styles = @user_styles[1..-1]
+
 .quiz-box#style_quiz
   .quiz-wrapper-box
     / Result
@@ -30,17 +34,16 @@ css:
         .title your style profile is:
         .quiz-row
           .quiz-col.quiz-col-6.quiz-result-1
-            - style = @user_styles.first
             / = image_tag 'custom-dresses/image-girl.jpg'
-            = image_tag "_style_profile/styles/#{ style.name }.jpg"
+            = image_tag "_style_profile/styles/#{ main_style.name }.jpg"
             .result.lg.centered 
               .text
-                = style.presentation
+                = main_style.presentation
                 br
-                = style.percentage
+                = main_style.percentage
           .quiz-col.quiz-col-6
             .quiz-row
-              - @user_styles[1..-1].each_with_index do |style, index|
+              - other_styles.each_with_index do |style, index|
                 .quiz-col.quiz-col-6 class="quiz-result-#{ index + 2}"
                   / = image_tag 'custom-dresses/image-girl.jpg'
                   = image_tag "_style_profile/styles/#{ style.name }.jpg"
@@ -48,11 +51,10 @@ css:
 
       .quiz-results-grey-block
         h2 
-          | Everyone has a bit of each profile in them, but you are mostly &lt;style profile&gt;.
+          | Everyone has a bit of each profile in them, but you are mostly &lt;#{main_style.presentation}&gt;.
           small 
-            | Here's a bit about being the &lt;style profile&gt; gal:
-        p 
-          | &lt;Style Profile Overview text&gt; Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi  et dolores quin ipsum loren tempor fugit lorem ipsum e ut
+            | Here's a bit about being the &lt;#{ main_style.presentation }&gt; gal:
+        p = main_style.description
       .quiz-results-black-block
         h2 YOUR PERSONAL ONLINE CLOSET
         p based on your style profile we think you will love these killer dresses
