[style quiz results] removed brackets

--- a/app/views/style_profiles/show.html.slim
+++ b/app/views/style_profiles/show.html.slim
@@ -51,9 +51,9 @@ ruby:
 
       .quiz-results-grey-block
         h2 
-          | Everyone has a bit of each profile in them, but you are mostly &lt;#{main_style.presentation}&gt;.
+          | Everyone has a bit of each profile in them, but you are mostly #{main_style.presentation}.
           small 
-            | Here's a bit about being the &lt;#{ main_style.presentation }&gt; gal:
+            | Here's a bit about being the #{ main_style.presentation } gal:
         p = main_style.description
       .quiz-results-black-block
         h2 YOUR PERSONAL ONLINE CLOSET
