--- a/app/views/spree/checkout/edit.html.slim
+++ b/app/views/spree/checkout/edit.html.slim
@@ -1,4 +1,4 @@
-= content_for :inline_javascript do
+/= content_for :inline_javascript do
   | page.initCheckoutEditPage();
 
 .checkout-title.page-title
