--- a/app/views/spree/admin/orders/_form.html.erb
+++ b/app/views/spree/admin/orders/_form.html.erb
@@ -17,9 +17,11 @@
         <thead id="line-items">
           <tr data-hook="admin_order_form_line_items_headers">
             <th><%= t(:item_description) %></th>
+            <th class="status"><%= t(:manufacturing_status) %></th>
             <th class="price"><%= t(:price) %></th>
             <th class="qty"><%= t(:qty) %></th>
             <th class="total"><span><%= t(:total) %></span></th>
+
             <th class="orders-actions actions" data-hook="admin_order_form_line_items_header_actions"></th>
           </tr>
         </thead>
@@ -30,7 +32,7 @@
         </tbody>
         <tbody id="subtotal" data-hook="admin_order_form_subtotal" class="no-border-top">
           <tr id="subtotal-row">
-            <td colspan="3"><b><%= t(:subtotal) %>:</b></td>
+            <td colspan="4"><b><%= t(:subtotal) %>:</b></td>
             <td class="total align-center"><span><%= @order.display_item_total %></span></td>
             <td class="actions"></td>
           </tr>
@@ -38,7 +40,7 @@
         <tbody id="order-charges" data-hook="admin_order_form_adjustments" class="no-border-top">
           <% @order.adjustments.eligible.each do |adjustment| %>
             <tr>
-              <td colspan="3"><strong><%= adjustment.label %>:</strong></td>
+              <td colspan="4"><strong><%= adjustment.label %>:</strong></td>
               <td class="total align-center"><span><%= adjustment.display_amount %></span></td>
               <td class="actions"></td>
             </tr>
@@ -46,7 +48,7 @@
         </tbody>
         <tbody id="order-total" data-hook="admin_order_form_total" class="grand-total no-border-top">
           <tr>
-            <td colspan="3"><b><%= t(:order_total) %>:</b></td>
+            <td colspan="4"><b><%= t(:order_total) %>:</b></td>
             <td class="total align-center"><span id="order_total"><%= @order.display_total %></span></td>
             <td class="actions"></td>
           </tr>
