--- a/app/views/spree/admin/orders/index.html.erb
+++ b/app/views/spree/admin/orders/index.html.erb
@@ -137,7 +137,13 @@
   <% @orders.each do |order| %>
     <tr data-hook="admin_orders_index_rows" class="state-<%= order.delivery_state.downcase %> <%= cycle('odd', 'even') %>">
       <td class="align-center"><%= l (@show_only_completed ? order.completed_at : order.created_at).to_date %></td>
-      <td class="align-center"><%= l order.projected_delivery_date.to_date %></td>
+      <td class="align-center">
+        <% if order.projected_delivery_date %>
+          <%= l order.projected_delivery_date.to_date %>
+        <% else %>
+          -  
+        <% end %>
+      </td>
       <td><%= link_to order.number, admin_order_path(order) %></td>
       <td class="align-center"><span class="state <%= order.state.downcase %>"><%= t("order_state.#{order.state.downcase}") %></span></td>
       <td class="align-center"><span class="state <%= order.payment_state %>"><%= link_to t("payment_states.#{order.payment_state}"), admin_order_payments_path(order) if order.payment_state %></span></td>
