--- a/app/views/spree/admin/orders/index.html.erb
+++ b/app/views/spree/admin/orders/index.html.erb
@@ -135,13 +135,13 @@
   <tbody>
 
   <% @orders.each do |order| %>
-    <tr data-hook="admin_orders_index_rows" class="state-<%= order.delivery_state.downcase %> <%= cycle('odd', 'even') %>">
+    <tr data-hook="admin_orders_index_rows" class="state-<%= order.state.downcase %> <%= cycle('odd', 'even') %>">
       <td class="align-center"><%= l (@show_only_completed ? order.completed_at : order.created_at).to_date %></td>
       <td class="align-center">
         <% if order.projected_delivery_date %>
           <%= l order.projected_delivery_date.to_date %>
         <% else %>
-          -  
+          -
         <% end %>
       </td>
       <td><%= link_to order.number, admin_order_path(order) %></td>
