add header on style quiz page

--- a/app/views/style_profiles/show.html.slim
+++ b/app/views/style_profiles/show.html.slim
@@ -27,7 +27,7 @@ ruby:
   other_styles = @user_styles[1..-1]
 
 .quiz-box#style_quiz
-  .quiz-result-header
+  .quiz-header
     = link_to '/' do
       = image_tag 'new-logo-white.svg', class: 'logo', :alt => 'Fame & Partners'
   .quiz-wrapper-box
