[tweak][blog] Point blog to tumblr

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -183,7 +183,7 @@ ruby:
                     p.text-center.edit-title Break Hearts not Bank Accounts
 
           li.menu-item
-            = link_to 'Blog', blog_path, class: 'menu-item--link'
+            = link_to 'Blog', 'http://fameandpartners.tumblr.com/', class: 'menu-item--link'
 
         ul.secondary.pull-right
           - if Features.active?(:moodboard)
