[chore][validation]: updates to index based on validation

--- a/app/views/index/show.html.slim
+++ b/app/views/index/show.html.slim
@@ -34,7 +34,7 @@
     h2 Fame &amp; Partners delivers a high quality, bespoke dress making  service without the  traditional cost
     = image_tag "bride.jpg", alt: 'Something here', class: 'img-responsive'
     h1
-      small formal dresses</br>
+      small formal dresses<br>
       | for every event
     ul.list-inline
       li : a href="/dresses/graduation" grad dresses
@@ -45,7 +45,7 @@
       li : a href="/dresses" ball gowns
 
   .col-md-4.brand-pink.text-center.shop-with-us
-    h4 Dedicated, specialist sample</br>rooms &amp; dress makers
+    h4 Dedicated, specialist sample<br>rooms &amp; dress makers
     p Our workers are highly skilled; each individual formal dress is crafted by one artisan seamstress.
 
     = image_tag "new-years-eve.jpg", alt: 'Something here', class: 'img-responsive portrait-img'
