--- a/app/views/layouts/redesign/_mobile_menu.html.slim
+++ b/app/views/layouts/redesign/_mobile_menu.html.slim
@@ -7,7 +7,7 @@
   #mobile-style.mobile-menu-options.hidden
     .text-center
       h3 Styles
-      ul.list-group
+      .list-group
         = link_to 'Two-Piece', build_taxon_path('Two Piece'), class: 'list-group-item', title: "Two-Piece Dresses"
         = link_to 'One Shoulder', build_taxon_path('One-Shoulder'), class: 'list-group-item', title: "One Shoulder Dresses"
         = link_to 'Strapless', build_taxon_path('Strapless'), class: 'list-group-item', title: "Strapless Dresses"
@@ -19,7 +19,7 @@
   #mobile-color.mobile-menu-options.hidden
     .text-center
       h3 Colors
-      ul.list-group
+      .list-group
         = link_to "Black Dresses", colour_path('Black'), class: 'list-group-item', title: "Black Dresses"
         = link_to "White / Ivory Dresses", colour_path('White'), class: 'list-group-item', title: "White / Ivory Dresses"
         = link_to "Blue Dresses", colour_path('Blue'), class: 'list-group-item', title: "Blue Dresses"
@@ -30,7 +30,7 @@
   #mobile-event.mobile-menu-options.hidden
     .text-center
       h3 Events
-      ul.list-group
+      .list-group
         = link_to 'Prom Dresses', build_taxon_path('Prom'), class: 'list-group-item', title: 'Prom Dresses'
         = link_to 'Bridesmaid Dresses', bridesmaid_lp_path, class: 'list-group-item', title: 'Bridesmaid Dresses'
         = link_to 'Formal Dresses', build_taxon_path('Formal'), class: 'list-group-item', title: 'Formal Dresses'
