[chore][validation]: updates to size guide based on validation

--- a/app/views/products/details/_size_guide.html.slim
+++ b/app/views/products/details/_size_guide.html.slim
@@ -11,7 +11,7 @@ h2.text-center Easy Size &amp; Measurement Guide
 
       p HIPS Measure 20cm below your waistline at the fullest part of your hips.
 
-      p SKIRT LENGTH Stand with your heels together,</br>keep the tape straight and perpendicular to the floor. Measure from your natural waistline.
+      p SKIRT LENGTH Stand with your heels together,<br>keep the tape straight and perpendicular to the floor. Measure from your natural waistline.
 
 
       = image_tag 'where-to-measure.png'
