[chore][validation]: update to about us based on validation

--- a/app/views/statics/about.html.slim
+++ b/app/views/statics/about.html.slim
@@ -8,26 +8,26 @@
     .col-md-6.no-padding.pink
       .header.black
         h2 what are we
-      span
+      .block
         p The only destination where you can customize the most current runway trends into a look that is uniquely yours.
 
 
     .col-md-6.no-padding
       .header.grey
         h2 who are we
-      span
+      .block
         p We are girls who love fashion and technology. The combination of the two means that millions of girls are inspiring other girls every day. We love that this sharing is shaping a generation of girls who want to express their individual style.
   .row
     .col-md-6.no-padding
       .header.grey
         h2 join the fame chain
-      span
+      .block
         p We have started the fame chain to inspire girls across the globe with what's trending right now for special occasions. If you consider yourself a fashion maven, a blogger or someone who would like to contribute, there are free dresses, dollars and privileges for members.
 
     .col-md-6.no-padding.pink
       .header.black
         h2 we believe
-      span
+      .block
         p We believe that fashion is a form of self expression to be celebrated and what better time to do so than at a special occasion. It's why we are utterly dedicated to helping young women craft a look that is totally unique to them
 
 
