--- a/app/views/questions/_step.html.slim
+++ b/app/views/questions/_step.html.slim
@@ -1,4 +1,4 @@
-.step.film-frame id="step-#{step}" style="float: left; width: 1054px;"
+.step.film-frame id="step-#{step}"
   - questions.each do |question|
     .question id="question-#{question.id}" data-a-label="#{analytics_label(:question, question, step)}"
       = f.fields_for "questions][#{question.id}" do |ff|
