--- a/app/views/style_profiles/show.html.slim
+++ b/app/views/style_profiles/show.html.slim
@@ -1,6 +1,7 @@
 - content_for :head do
   = stylesheet_link_tag    'quiz'
   = javascript_include_tag 'quiz'
+  meta name="viewport" content="width=device-width, initial-scale=1"
 
 - content_for :footer do
   = render '/shared/marketing'
