--- a/app/assets/stylesheets/partials/_quiz.css.scss
+++ b/app/assets/stylesheets/partials/_quiz.css.scss
@@ -1,4 +1,9 @@
 @import url(//fonts.googleapis.com/css?family=Forum);
+
+body {
+  margin: 0;
+}
+
 .quiz-box .quiz-overlay {
   background: #000;
   background: rgba(0, 0, 0, .7);
@@ -20,18 +25,14 @@
 }
 
 .quiz-wrapper-box {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 1100px;
-  height: 680px;
-  z-index: 2000;
-  margin: -360px 0 0 -550px;
+  max-width: 1100px;
+  min-width: 560px;
+  margin-left: auto;
+  margin-right: auto;
+  min-height: 680px;
   background: #fff;
   z-index: 31;
-
-  top: 30px;
-  margin-top: 0;
+  
   .close-quiz {
     position: absolute;
     top: 19px;
@@ -58,8 +59,12 @@
   }
   .quiz-box-inner {
     height: 680px;
-    padding: 22px 20px 130px;
+    padding: 22px 20px 85px;
     position: relative;
+    @media (max-width: 600px) {
+      padding-left: 10px;
+      padding-right: 10px;
+    }
     @include box-sizing(border-box);
   }
   .signup-box-wrapper {
@@ -68,7 +73,7 @@
     overflow: hidden;
     background: image-url('_quiz/signin-bg.png') center center no-repeat;
     background-size: cover;
-    margin: -42px -20px -130px;
+    margin: -42px -20px -85px;
     position: relative;
     .facebook-button {
       display: block;
@@ -284,7 +289,9 @@
     }
   }
   .steps-box {
-    width: 1054px;
+    width: 100%;
+    overflow: hidden;
+    .step { float: left;}
     .questions-count {
       position: absolute;
       top: 19px;
@@ -301,7 +308,7 @@
     h1 {
       font: 400 47px/0.8 $fontThree;
       text-align: center;
-      padding-top: 4px;
+      padding: 4px 85px 0;
       margin: 0px;
       em { 
         text-transform: none;
@@ -395,10 +402,17 @@
     .photos {
       padding-bottom: 42px;
       .item {
-        width: 13.4333%;
         margin-bottom: 10px;
         height: auto;
+        
+        width: 13.4333%;
+
+        @media (max-width: 900px) {
+          width: 15%;
+        }
+
         &.active {
+
           .selected { display: block;}
         }
         img {
@@ -414,11 +428,11 @@
         }
         .selected {
           position: absolute;
-          left: 50%;
+          left: 5px;
+          right: 5px;
           top: 50%;
-          margin: -27px 0 0 -60px;
+          margin-top: -27px;
           height: 55px;
-          width: 120px;
           background-color: rgba(255, 255, 255, 0.75);
           border: solid 1px #000;
           line-height: 55px;
@@ -429,33 +443,6 @@
           display: none;
         }
       }
-      // li {
-      //   list-style: none;
-      //   float: left;
-      //   margin: 0 0 0 37px;
-      //   box-shadow: 0 1px 3px rgba(0, 0, 0, .5);
-      //   width: 176px;
-      //   position: relative;
-      //   .label {
-      //     bottom: 30px;
-      //     left: 30px;
-      //     right: 30px;
-      //     position: absolute;
-      //     background: #e8e8e8;
-      //     text-transform: uppercase;
-      //     font-size: 12px;
-      //     padding: 4px 0 0;
-      //     text-align: center;
-      //   }
-      //   &:first-child {
-      //     margin: 0;
-      //   }
-      //   &.active {
-      //     label {
-      //       border-color: #b7f0e5;
-      //     }
-      //   }
-      // }
     }
     .choices {
       font-size: 0;
@@ -468,13 +455,22 @@
         margin-top: 70px;
         font-size: 30px;
         font-family: $fontThree;
+        @media (max-width: 600px) {
+          font-size: 25px;
+        }
         input[type=checkbox], input[type=radio] { display: none;}
-        &.active:after {
-          display: block;
-        } 
+        label {
+          position: relative;
+          z-index: 1;
+        }
+        &.active {
+          &:after {
+            display: block;
+          } 
+        }
         &:after {
           content: '';
-          z-index: -1;
+          z-index: 0;
           position: absolute;
           left: 0;
           right: 0;
@@ -506,49 +502,6 @@
         }
       }
     }
-    // .choices {
-    //   margin: 10px 7px 20px;
-    //   overflow: hidden;
-    //   li {
-    //     margin: 0 0 20px;
-    //     width: 208px;
-    //     float: left;
-    //     text-align: center;
-    //     text-transform: uppercase;
-    //     font: 400 16px/1 $fontOne;
-    //     label {
-    //       text-decoration: none;
-    //       display: inline-block;
-    //       padding: 4px;
-    //       border: 5px solid transparent;
-    //       position: relative;
-    //       overflow: hidden;
-    //       width: 154px;
-    //       height: 40px;
-    //       line-height: 40px;
-    //       input {
-    //         position: absolute;
-    //         top: 0;
-    //         left: 0;
-    //         width: 200px;
-    //         height: 200px;
-    //         opacity: 0;
-    //         filter: alpha(opacity=0);
-    //       }
-    //     }
-    //     &.active {
-    //       label {
-    //         border-color: #b7f0e5;
-    //       }
-    //     }
-    //   }
-    //   &.brands{
-    //     margin-left: 100px;
-    //     li{
-    //       width: 280px;
-    //     }
-    //   }
-    // }
     .nails {
       width: 956px;
       margin: 30px auto;
@@ -587,15 +540,20 @@
         }
       }
     }
-    .stars, .lips {
-      margin: 20px 0 0;
+    .chart {
       font-size: 0;
-      white-space: nowrap;      
+      margin-top: 80px;
+      white-space: nowrap;  
+      width: 1060px;  
+      -webkit-transform-origin: 0 0;
+         -moz-transform-origin: 0 0;
+          -ms-transform-origin: 0 0;
+              transform-origin: 0 0;
       .item {
         cursor: pointer;
         display: inline-block;
         vertical-align: bottom;
-        width: 105px;
+        width: 10%;
         position: relative;
         label {
           display: block;
@@ -606,128 +564,90 @@
           right: 0;
           input[type=radio] { display: none;}
         }
-        // &.active {
-        //   background-position: 0 0;
-        // }
       }
     }
     .stars {
+      margin: 20px 0;
       .item {
         &.step-0 {
           height: 67px;
           position: relative;
           bottom: -37px;
-          width: 103px;
-          background: url('_quiz/steps/0.png') no-repeat;
-          &.active { background-position: 0 -67px;}
+          background: url('_quiz/steps/0.png') 50% 0 no-repeat;
+          &.active { background-position: 50% -67px;}
         }
         &.step-1 {
           height: 58px;
-          background: url('_quiz/steps/1.png') no-repeat;
-          &.active { background-position: 0 -58px;}
+          background: url('_quiz/steps/1.png') 50% 0 no-repeat;
+          &.active { background-position: 50% -58px;}
         }
         &.step-2 {
           height: 86px;
-          background: url('_quiz/steps/2.png') no-repeat;
-          &.active { background-position: 0 -86px;}
+          background: url('_quiz/steps/2.png') 50% 0 no-repeat;
+          &.active { background-position: 50% -86px;}
         }
         &.step-3 {
           height: 114px;
-          background: url('_quiz/steps/3.png') no-repeat;
-          &.active { background-position: 0 -114px;}
+          background: url('_quiz/steps/3.png') 50% 0 no-repeat;
+          &.active { background-position: 50% -114px;}
         }
         &.step-4 {
           height: 142px;
-          background: url('_quiz/steps/4.png') no-repeat;
-          &.active { background-position: 0 -142px;}
+          background: url('_quiz/steps/4.png') 50% 0 no-repeat;
+          &.active { background-position: 50% -142px;}
         }
         &.step-5 {
           height: 171px;
-          background: url('_quiz/steps/5.png') no-repeat;
-          &.active { background-position: 0 -171px;}
+          background: url('_quiz/steps/5.png') 50% 0 no-repeat;
+          &.active { background-position: 50% -171px;}
         }
         &.step-6 {
           height: 199px;
-          background: url('_quiz/steps/6.png') no-repeat;
-          &.active { background-position: 0 -199px;}
+          background: url('_quiz/steps/6.png') 50% 0 no-repeat;
+          &.active { background-position: 50% -199px;}
         }
         &.step-7 {
           height: 227px;
-          background: url('_quiz/steps/7.png') no-repeat;
-          &.active { background-position: 0 -227px;}
+          background: url('_quiz/steps/7.png') 50% 0 no-repeat;
+          &.active { background-position: 50% -227px;}
         }
         &.step-8 {
           height: 255px;
-          background: url('_quiz/steps/8.png') no-repeat;
-          &.active { background-position: 0 -255px;}
+          background: url('_quiz/steps/8.png') 50% 0 no-repeat;
+          &.active { background-position: 50% -255px;}
         }
         &.step-9 {
           height: 363px;
-          width: 109px;
-          background: url('_quiz/steps/9.png') no-repeat;
-          &.active { background-position: 0 -363px;}
+          // width: 109px;
+          background: url('_quiz/steps/9.png') 50% 0 no-repeat;
+          &.active { background-position: 50% -363px;}
         }
       }
     }
     .lips {
       margin-top: 80px;
       .item {
-        width: 104px;
-        background-color: #000;
+        background-repeat: no-repeat;
+        background-position: 0 0;
+        &.active { background-position: 0 100%;}
+        
+        // - size
         &.step-0, &.step-1 { height: 57px;}
         &.step-2, &.step-3 { height: 113px;}
         &.step-4, &.step-5 { height: 170px;}
         &.step-6, &.step-7 { height: 226px;}
         &.step-8, &.step-9 { height: 282px;}
-        &.step-0 { 
-          background: url('_quiz/lips/0.png') no-repeat;
-          &.active { background-position: 0 -57px;}
-        }
-        &.step-1 { 
-          background: url('_quiz/lips/1.png') no-repeat;
-          &.active { background-position: 0 -57px;}
-        }
-        &.step-2 { 
-          background: url('_quiz/lips/2.png') no-repeat;
-          &.active { background-position: 0 -113px;}
-        }
-        &.step-3 { 
-          background: url('_quiz/lips/3.png') no-repeat;
-          &.active { background-position: 0 -113px;}
-        }
-        &.step-4 { 
-          background: url('_quiz/lips/4.png') no-repeat;
-          &.active { background-position: 0 -170px;}
-        }
-        &.step-5 { 
-          background: url('_quiz/lips/5.png') no-repeat;
-          width: 107px;
-          &.active { background-position: 0 -170px;}
-        }
-        &.step-6 { 
-          background: url('_quiz/lips/6.png') no-repeat;
-          width: 108px;
-          &.active { background-position: 0 -226px;}
-        }
-        &.step-7 { 
-          background: url('_quiz/lips/7.png') no-repeat;
-          width: 107px;
-          &.active { background-position: 0 -226px;}
-        }
-        &.step-8 { 
-          background: url('_quiz/lips/8.png') no-repeat;
-          &.active { background-position: 0 -282px;}
-        }
-        &.step-9 { 
-          background: url('_quiz/lips/9.png') no-repeat;
-          &.active { background-position: 0 -282px;}
+        
+        // - bg
+        @for $i from 0 through 9 {
+          &.step-#{$i} { background-image: url('_quiz/lips/#{$i}.png');}
         }
       }
     }
     .progress-next {
       position: absolute;
       margin: 0 84px;
-      bottom: 25px;
+      bottom: 20px;
       left: 20px;
       right: 20px;
       .progress-bar {
@@ -897,7 +817,7 @@
     }
   }
   .invite-friends {
-    width: 670px;
+    width: 100%;
     height: 430px;
     position: relative;
     margin: 45px auto 0;
@@ -905,8 +825,9 @@
       width: 338px;
       height: 138px;
       position: absolute;
-      left: 160px;
-      top: 130px;
+      left: 50%;
+      top: 50%;
+      margin: -70px 0 0 -170px;
       border: solid 1px #d7d7d7;
       text-align: center;
       .choose-friends-link{
@@ -1709,12 +1630,18 @@
 
 
 // Quiz result 
+// - vars
+$quiz-result-gutter: 20px;
+$quiz-result-gutter-sm: 10px;
 .quiz-header {
   background-color: #000;
   height: 70px;
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: $quiz-result-gutter;
   color: #fff;
+  @media (max-width: 768px) {
+    margin-bottom: $quiz-result-gutter-sm;
+  }
   .logo {
     width: 320px;
     margin-top: 22px;
@@ -1722,9 +1649,13 @@
 }
 .quiz-results-wrapper {
   .quiz-row {
-    margin-left: -20px;
-    margin-right: -20px;
+    margin-left: -$quiz-result-gutter;
+    margin-right: -$quiz-result-gutter;
     box-sizing: border-box;
+    @media (max-width: 768px) {
+      margin-left: -$quiz-result-gutter-sm;
+      margin-right: -$quiz-result-gutter-sm;
+    }
     &:after {
       content: ' ';
       display: table;
@@ -1733,10 +1664,13 @@
     img { width: 100%;}
   }
   .quiz-col {
-    padding: 20px;
+    padding: $quiz-result-gutter;
     position: relative;
     float: left;
     box-sizing: border-box;
+    @media (max-width: 768px) {
+      padding: $quiz-result-gutter-sm;
+    }
   }
   .quiz-col-6 { width: (100% / 2);}
   .quiz-col-4 { width: (100% / 3);}
@@ -1784,19 +1718,31 @@
   .quiz-result-1 {}
   .quiz-result-2 {
     padding-top: 0;
-    padding-bottom: 30px;
+    padding-bottom: ($quiz-result-gutter * 3/2);
+    @media (max-width: 768px) {
+      padding-bottom: ($quiz-result-gutter-sm * 3/2);
+    }
   }
   .quiz-result-3 {
     padding-top: 0;
-    padding-bottom: 30px;
+    padding-bottom: ($quiz-result-gutter * 3/2);
+    @media (max-width: 768px) {
+      padding-bottom: ($quiz-result-gutter-sm * 3/2);
+    }
   }
   .quiz-result-4 {
-    padding-top: 30px;
+    padding-top: ($quiz-result-gutter * 3/2);
     padding-bottom: 0;
+    @media (max-width: 768px) {
+      padding-top: ($quiz-result-gutter-sm * 3/2);
+    }
   }
   .quiz-result-5 {
-    padding-top: 30px;
+    padding-top: ($quiz-result-gutter * 3/2);
     padding-bottom: 0;
+    @media (max-width: 768px) {
+      padding-top: ($quiz-result-gutter-sm * 3/2);
+    }
   }
 }
 
