--- a/app/views/questions/_sexiness.html.slim
+++ b/app/views/questions/_sexiness.html.slim
@@ -3,7 +3,7 @@ h1
   | RANK HOW SEXY YOU LIKE TO LOOK
 .subtitle
   span Click on the scale - from least important to very important
-.lips.items-box
+.chart.lips.items-box
   - question.answers.order('sexiness ASC').each_with_index do |answer, index|
     .item class="step-#{index}"
       label
