--- a/app/views/spree/checkout/_payment_step.html.slim
+++ b/app/views/spree/checkout/_payment_step.html.slim
@@ -20,17 +20,17 @@
       else
         gateway_type = null
       end
-      gateway_options = {}
+      gateway_options ||= {}
       init_checkout_payment_form = "
         checkout.payment_step.init({
           bill_address: bill_address,
           gateway_type: '#{ gateway_type }',
-          gateway_options: '#{raw gateway_options }'
+          gateway_options: #{raw gateway_options.to_json}
         });
       "
     - content_for :inline_javascript do
       | var bill_address = #{raw ::AddressSerializer.new(current_order.bill_address).to_json };
-      = raw init_checkout_address_form
+      = raw init_checkout_payment_form
 
   h2.checkout-section-title Payment Details
   / br
