[fix][style-consult] Fix position of button in form

--- a/app/views/style_consultations/new.html.slim
+++ b/app/views/style_consultations/new.html.slim
@@ -22,7 +22,7 @@
           .col-md-12.form-group
             label Phone
             = f.text_field :phone, :class => 'form-control form-control-md'
-          .submit
-            = f.submit "Book now", class: 'btn btn-black btn-block'
-
-
+        .row
+          .col-md-12.form-group
+            .submit
+              = f.submit "Book now", class: 'btn btn-black btn-block'
